# hash_function_drag_race

./: CMakeLists.txt  README.md  results.ods
src/: byte_ranges.hpp  crc32_isal.hpp  djb2.hpp  hardware_sha256.hpp  main.cpp  standard.hpp  xxhash_struct.hpp
